--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
   flutter_localizations:
     sdk: flutter
   collection: ^1.19.0
