--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,13 @@ flutter:
     - assets/jpg/
     - assets/env/.env
 
+  fonts:
+    - family: Axiforma
+      fonts:
+        - asset: assets/Fonts/Axiforma Regular.otf
+        - asset: assets/Fonts/Axiforma Bold.otf
+
+
 flutter_icons:
   android: "launcher_icon"
   ios: true
