--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   package_info_plus: ^8.3.1
   flutter_dotenv: ^6.0.0
+  shared_preferences: ^2.2.2
 
 dependency_overrides:
   uuid: ^3.0.4
@@ -126,6 +127,7 @@ flutter:
     - assets/png/
     - assets/jpg/
     - assets/env/.env
+    - assets/Loading.json
 
   fonts:
     - family: Axiforma
